# flumes-django

./: README.md  pyproject.toml  tox.ini
.github/workflows/: cd.yml  ci.yml
demo/: settings.py
flume_django/: admin.py  apps.py  config.py  models.py  router.py
flume_django/static/admin/flume_django/info/: topology.css
flume_django/templates/admin/flume_django/file/: change_list.html
flume_django/templates/admin/flume_django/info/: topology.html
flume_django/templates/admin/flume_django/stream/: children.html
flume_django/templates/flume_django/templatetags/: children.html
flumes_django/: admin.py  apps.py  config.py  managers.py  models.py  router.py
flumes_django/templates/admin/flumes_django/file/: change_list.html  upload.html
flumes_django/templates/admin/flumes_django/info/: streams.html
flumes_django/templatetags/: topology.py
tests/: settings.py  test_flume_django.py  test_flumes_django.py
